syntax = "proto3";

package clavis.v1;
option go_package = "github.com/yourusername/clavis/api/proto;clavis";

service Clavis {
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Put(PutRequest) returns (PutResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  bytes value = 1;
  bool found = 2;
}

message PutRequest {
  string key = 1;
  bytes value = 2;
}

message PutResponse {}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {}
